--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,1 +1,8 @@
 /build
+/src/main/res/drawable/bottom_bookmark.png
+/src/main/res/drawable/bottom_goodtip.png
+/src/main/res/drawable/bottom_hometap.png
+/src/main/res/drawable/bottom_store.png
+/src/main/res/drawable/bottom_talk.png
+/src/main/res/drawable/main_menu.png
+/google-services.json
