--- a/app/.gitignore
+++ b/app/.gitignore
@@ -6,3 +6,7 @@
 /src/main/res/drawable/bottom_talk.png
 /src/main/res/drawable/main_menu.png
 /google-services.json
+/src/main/res/drawable/loginbg.png
+/src/main/res/drawable/logo.png
+/src/main/res/drawable/min_logo.png
+/src/main/res/drawable/upperbg.png
