--- a/app/.gitignore
+++ b/app/.gitignore
@@ -10,3 +10,13 @@
 /src/main/res/drawable/logo.png
 /src/main/res/drawable/min_logo.png
 /src/main/res/drawable/upperbg.png
+/src/main/res/drawable/bookmark_color.png
+/src/main/res/drawable/bookmark_white.png
+/src/main/res/drawable/main_icon_all.png
+/src/main/res/drawable/main_icon_cook.png
+/src/main/res/drawable/main_icon_economy.png
+/src/main/res/drawable/main_icon_else.png
+/src/main/res/drawable/main_icon_hobby.png
+/src/main/res/drawable/main_icon_interior.png
+/src/main/res/drawable/main_icon_life.png
+/src/main/res/drawable/main_icon_oneroom.png
