--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.MySoloLife"
         tools:targetApi="31">
         <activity
+            android:name=".contentsList.ContentListActivity"
+            android:exported="false" />
+        <activity
             android:name=".auth.JoinActivity"
             android:exported="false" />
         <activity
