--- a/app/.gitignore
+++ b/app/.gitignore
@@ -20,3 +20,5 @@
 /src/main/res/drawable/main_icon_interior.png
 /src/main/res/drawable/main_icon_life.png
 /src/main/res/drawable/main_icon_oneroom.png
+/src/main/res/drawable/btnwrite.png
+/src/main/res/drawable/plusbtn.png
